--- a/index.html
+++ b/index.html
@@ -62,34 +62,39 @@
 
     // ----------------- LOAD DROPDOWNS -----------------
     async function loadDriversAndVehicles() {
-      // Drivers
-      const { data: drivers, error: driversError } = await supabase.from("drivers").select("*");
-      const driverSelect = document.getElementById("driver");
-      driverSelect.innerHTML = "";
-      if (driversError || !drivers || drivers.length === 0) {
-        driverSelect.innerHTML = `<option value="">⚠️ No drivers found</option>`;
-      } else {
-        drivers.forEach(d => {
-          const option = document.createElement("option");
-          option.value = d.id;
-          option.textContent = `${d.name} (${d.phone})`;
-          driverSelect.appendChild(option);
-        });
-      }
+      try {
+        // Drivers
+        const { data: drivers, error: driversError } = await supabase.from("drivers").select("*");
+        const driverSelect = document.getElementById("driver");
+        driverSelect.innerHTML = "";
+        if (driversError || !drivers || drivers.length === 0) {
+          driverSelect.innerHTML = `<option value="">⚠️ No drivers found</option>`;
+        } else {
+          drivers.forEach(d => {
+            const option = document.createElement("option");
+            option.value = d.id;
+            option.textContent = `${d.name} (${d.phone})`;
+            driverSelect.appendChild(option);
+          });
+        }
 
-      // Vehicles
-      const { data: vehicles, error: vehiclesError } = await supabase.from("vehicles").select("*");
-      const vehicleSelect = document.getElementById("vehicle");
-      vehicleSelect.innerHTML = "";
-      if (vehiclesError || !vehicles || vehicles.length === 0) {
-        vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found</option>`;
-      } else {
-        vehicles.forEach(v => {
-          const option = document.createElement("option");
-          option.value = v.id;
-          option.textContent = v.registration || v.reg_number;
-          vehicleSelect.appendChild(option);
-        });
+        // Vehicles
+        const { data: vehicles, error: vehiclesError } = await supabase.from("vehicles").select("*");
+        const vehicleSelect = document.getElementById("vehicle");
+        vehicleSelect.innerHTML = "";
+        if (vehiclesError || !vehicles || vehicles.length === 0) {
+          vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found</option>`;
+        } else {
+          vehicles.forEach(v => {
+            const option = document.createElement("option");
+            option.value = v.id;
+            option.textContent = v.registration || v.reg_number;
+            vehicleSelect.appendChild(option);
+          });
+        }
+      } catch (err) {
+        console.error("Error loading drivers/vehicles:", err);
+        document.getElementById("status").innerText = "❌ Error loading data";
       }
     }
 
@@ -105,32 +110,42 @@
         return;
       }
 
-      // Insert into fuel_vouchers (amount_rand column)
-      const { error } = await supabase.from("fuel_vouchers").insert([
-        { driver_id: driver, vehicle_id: vehicle, amount_rand: amount }
-      ]);
+      try {
+        // Insert into fuel_vouchers (amount_rand column)
+        const { error } = await supabase.from("fuel_vouchers").insert([
+          { driver_id: driver, vehicle_id: vehicle, amount_rand: amount }
+        ]);
 
-      if (error) {
-        document.getElementById("status").innerText = "❌ Error: " + error.message;
-        console.error(error);
-        return;
+        if (error) {
+          document.getElementById("status").innerText = "❌ Error: " + error.message;
+          console.error(error);
+          return;
+        }
+
+        document.getElementById("status").innerText = "✅ Voucher created successfully!";
+
+        // Optional: send SMS via Supabase Edge Function
+        const driverObj = (await supabase.from("drivers").select("*").eq("id", driver).single()).data;
+        if (driverObj?.phone) {
+          const smsMessage = `Pakisa Fuel Voucher: R${amount} approved for your vehicle.`;
+          await fetch(`${SUPABASE_URL}/functions/v1/send_sms_voucher`, {
+            method: "POST",
+            headers: { 
+              "Content-Type": "application/json", 
+              "Authorization": `Bearer ${SUPABASE_ANON_KEY}` 
+            },
+            body: JSON.stringify({ phone: driverObj.phone, message: smsMessage })
+          });
+        }
+
+        // Reset form
+        document.getElementById("voucherForm").reset();
+        loadDriversAndVehicles();
+
+      } catch (err) {
+        console.error("Error submitting voucher:", err);
+        document.getElementById("status").innerText = "❌ Error submitting voucher";
       }
-
-      document.getElementById("status").innerText = "✅ Voucher created successfully!";
-
-      // Optional: call SMS Portal via Supabase function
-      const driverObj = (await supabase.from("drivers").select("*").eq("id", driver).single()).data;
-      if (driverObj?.phone) {
-        const smsMessage = `Pakisa Fuel Voucher: R${amount} approved for your vehicle.`;
-        await fetch(`${SUPABASE_URL}/functions/v1/send_sms_voucher`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json", "Authorization": `Bearer ${SUPABASE_ANON_KEY}` },
-          body: JSON.stringify({ phone: driverObj.phone, message: smsMessage })
-        });
-      }
-
-      // Reset form
-      document.getElementById("voucherForm").reset();
     });
 
     loadDriversAndVehicles();
